[package]
name = "voxel_flight_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
bytemuck = "1.13.1"
cgmath = { version = "0.18.0", features = ["swizzle"] }
egui = "0.21.0"
egui_winit_vulkano = "0.24.0"
gilrs = "0.10.2"
rand = "0.8.5"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
vulkano-util = "0.33.0"
winit = "0.28.3"

[profile.release]
lto = true
strip = true
panic = "abort"

[[bin]]
name = "voxel_flight_simulator"
path = "src/main.rs"