[package]
name = "voxel_flight_simulator"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0+"

[dependencies]
arr_macro = "0.2.1"
bytemuck = "1.13.1"
cgmath = { version = "0.18.0", features = ["swizzle"] }
dirs = "5.0.1"
egui = "0.21.0"
egui_winit_vulkano = "0.24.0"
gilrs = "0.10.2"
rand = "0.8.5"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-util = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.6"
fast_loaded_dice_roller = { version = "0.1.6", features = ["rand"] }

[profile.release]
lto = true
strip = true
panic = "abort"

[[bin]]
name = "voxel_flight_simulator"
path = "src/main.rs"
